apps/nextcloud-fpm/production/resources/onlyoffice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlyoffice
  labels:
    component: onlyoffice
spec:
  replicas: 1
  selector:
    matchLabels:
      component: onlyoffice
  template:
    metadata:
      labels:
        component: onlyoffice
    spec:
      containers:
      - name: onlyoffice
        image: onlyoffice
        ports:
        - containerPort: 80
