apps/nextcloud-fpm/production/resources/onlyoffice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice
  labels:
    component: onlyoffice
spec:
  selector:
    component: onlyoffice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
