apps/nextcloud-fpm/production/resources/onlyoffice/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: office
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "16G"
spec:
  tls:
  - hosts:
    - office.jz-c.org
    secretName: office-jz-c-org-production-tls
  rules:
  - host: office.jz-c.org
    http:
      paths:
      - backend:
          serviceName: onlyoffice
          servicePort: 80
